@@ -10,6 +10,10 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.25_02-dev
 
+allow per-server and per-location PerlSetEnv to be properly merged
+when a per-server handler is configured, thanks to Michael Barry for
+the spot
+
 enabled Apache::ModuleConfig on win32
 [Randy Kobes <randy@theoryx5.uwinnipeg.ca>]
 
